--- a/app/src/main/res/layout/fragment_music.xml
+++ b/app/src/main/res/layout/fragment_music.xml
@@ -15,7 +15,7 @@
         android:layout_marginTop="50dp"
         android:gravity="center_vertical"
         android:lineSpacingExtra="0sp"
-        android:text="@string/your_favour"
+        android:text="@string/top_artists"
         android:textSize="22dp" />
 
 
